--- a/dic.html
+++ b/dic.html
@@ -15,8 +15,8 @@
         <button id="send-btn">Send</button>
     </div>
 
-    <script src="api.js"></script>
-    <script src="app.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
