DAY-1 files added

--- a/index.html
+++ b/index.html
@@ -404,9 +404,10 @@ Join us on this journey of discovery, learning, and adventure. Happy Reading!
         <pre>
         Feel free to contact us anytime in the mail and numbers below
         Email:-readmind@gmail.com
-        Phone Number:-+0424 6966050
+        Phone Number:+0424 6966050
                     :+90323252555
     Abc complex,1st floor,Guindy,chennai-683055.
+<pre className="text-sm mt-6">&copy; 2025 ReadMind. All rights reserved.</pre>
         </pre>
     </div>
 
