--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -188,29 +187,66 @@
     </div>
 
     <script>
-        document.getElementById("loginForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
-    
-            fetch("login.php", {
-                method: "POST",
-                headers: { "Content-Type": "application/x-www-form-urlencoded" },
-                body: `email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}`
-            })
-            .then(response => {
-                if (!response.ok) throw new Error("Network response was not ok: " + response.status);
-                return response.json();
-            })
-            .then(data => {
-                console.log("Login response:", data);
-                alert(data.message);
-                if (data.status === "success") window.location.href = "books.html"; // Redirect to books.html
-            })
-            .catch(error => {
-                console.error("Fetch error:", error);
-                alert("An error occurred: " + error.message);
+        // Wait for DOM to load to avoid null errors
+        document.addEventListener("DOMContentLoaded", function() {
+            // Dark Mode Toggle
+            const darkModeToggle = document.getElementById("darkModeToggle");
+            const body = document.body;
+
+            // Load dark mode preference from localStorage
+            if (localStorage.getItem("darkMode") === "enabled") {
+                body.classList.add("dark-mode");
+                darkModeToggle.textContent = "☀️ Light Mode";
+            }
+
+            darkModeToggle.addEventListener("click", () => {
+                body.classList.toggle("dark-mode");
+                if (body.classList.contains("dark-mode")) {
+                    darkModeToggle.textContent = "☀️ Light Mode";
+                    localStorage.setItem("darkMode", "enabled");
+                } else {
+                    darkModeToggle.textContent = "🌙 Dark Mode";
+                    localStorage.setItem("darkMode", "disabled");
+                }
             });
+
+            // Login Form Submission
+            const loginForm = document.getElementById("loginForm");
+            if (loginForm) {
+                loginForm.addEventListener("submit", function(event) {
+                    event.preventDefault();
+
+                    const email = document.getElementById("email").value.trim();
+                    const password = document.getElementById("password").value;
+
+                    // Basic email validation
+                    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+                    if (!emailRegex.test(email)) {
+                        alert("Please enter a valid email address.");
+                        return;
+                    }
+
+                    // Password length validation
+                    if (password.length < 6) {
+                        alert("Password must be at least 6 characters long.");
+                        return;
+                    }
+
+                    // Retrieve users from localStorage
+                    const users = JSON.parse(localStorage.getItem("users")) || [];
+                    const user = users.find(u => u.email === email && u.password === password);
+
+                    if (user) {
+                        alert("Login successful! Welcome, " + email);
+                        // Redirect to books.html after successful login
+                        window.location.href = "books.html";
+                    } else {
+                        alert("Invalid email or password. Please try again or sign up.");
+                    }
+                });
+            } else {
+                console.error("Login form not found!");
+            }
         });
     </script>
 </body>
